error exceptions added