@@ -1,32 +1,28 @@
 package com.confpub.web;
 
-import org.springframework.transaction.annotation.Transactional;
 import com.confpub.domain.Attachment;
 import com.confpub.domain.Page;
 import com.confpub.domain.PageAttachment;
 import com.confpub.domain.PublishLog;
-
 import com.confpub.repository.AttachmentRepository;
 import com.confpub.repository.PageAttachmentRepository;
 import com.confpub.repository.PageRepository;
-
 import com.confpub.service.PublishingService;
-
+import com.confpub.web.dto.AddAttachmentsRequest;
 import com.confpub.web.dto.CreatePageRequest;
 import com.confpub.web.dto.PageDetailsResponse;
-import com.confpub.web.dto.UpdatePageRequest;
-import com.confpub.web.dto.AddAttachmentsRequest;
-import com.confpub.web.dto.ReorderAttachmentsRequest;
 import com.confpub.web.dto.PublishResponse;
-
+import com.confpub.web.dto.ReorderAttachmentsRequest;
+import com.confpub.web.dto.UpdatePageRequest;
 import jakarta.validation.Valid;
-
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
 
 @RestController
@@ -49,17 +45,18 @@ public class PageController {
         this.publishingService = publishingService;
     }
 
+    // ==== Pages ====
+
     @GetMapping
     public List<Page> listPages() {
         return pageRepository.findAll();
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<PageDetailsResponse> getPage(@PathVariable Long id) {
-        return pageRepository.findById(id)
-                .map(this::toDetailsResponse)
-                .map(ResponseEntity::ok)
-                .orElseGet(() -> ResponseEntity.notFound().build());
+    public PageDetailsResponse get(@PathVariable Long id) {
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
+        return toDetailsResponse(page);
     }
 
     @PostMapping
@@ -77,7 +74,6 @@ public class PageController {
             for (Long attachmentId : request.getAttachmentIds()) {
                 Attachment attachment = attachmentRepository.findById(attachmentId).orElse(null);
                 if (attachment == null) continue;
-
                 PageAttachment pa = new PageAttachment();
                 pa.setPage(saved);
                 pa.setAttachment(attachment);
@@ -85,75 +81,65 @@ public class PageController {
                 pageAttachmentRepository.save(pa);
             }
         }
-
         return ResponseEntity.ok(toDetailsResponse(saved));
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<PageDetailsResponse> updatePage(
-            @PathVariable Long id,
-            @Valid @RequestBody UpdatePageRequest request) {
+    public ResponseEntity<PageDetailsResponse> updatePage(@PathVariable Long id,
+                                                          @Valid @RequestBody UpdatePageRequest request) {
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
 
-        return pageRepository.findById(id)
-                .map(page -> {
-                    page.setTitle(request.getTitle());
-                    page.setContent(request.getContent());
-                    page.setSpaceKey(request.getSpaceKey());
-                    page.setParentPageId(request.getParentPageId());
-                    Page saved = pageRepository.save(page);
-                    return ResponseEntity.ok(toDetailsResponse(saved));
-                })
-                .orElseGet(() -> ResponseEntity.notFound().build());
+        page.setTitle(request.getTitle());
+        page.setContent(request.getContent());
+        page.setSpaceKey(request.getSpaceKey());
+        page.setParentPageId(request.getParentPageId());
+
+        Page saved = pageRepository.save(page);
+        return ResponseEntity.ok(toDetailsResponse(saved));
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deletePage(@PathVariable Long id) {
-        var pageOpt = pageRepository.findById(id);
-        if (pageOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
 
-        var links = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
+        // удаляем связи, затем саму страницу
+        List<PageAttachment> links = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
         pageAttachmentRepository.deleteAll(links);
+        pageRepository.delete(page);
 
-        pageRepository.delete(pageOpt.get());
         return ResponseEntity.noContent().build();
     }
 
+    // ==== Attachments binding ====
+
     @PostMapping("/{id}/attachments")
-    public ResponseEntity<PageDetailsResponse> addAttachments(
-            @PathVariable Long id,
-            @Valid @RequestBody AddAttachmentsRequest request) {
+    public ResponseEntity<PageDetailsResponse> addAttachments(@PathVariable Long id,
+                                                              @Valid @RequestBody AddAttachmentsRequest request) {
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
 
-        return pageRepository.findById(id)
-                .map(page -> {
-                    int position = pageAttachmentRepository
-                            .findByPageIdOrderByPositionAsc(id)
-                            .size();
+        int position = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id).size();
 
-                    for (Long attachmentId : request.getAttachmentIds()) {
-                        Attachment attachment = attachmentRepository.findById(attachmentId).orElse(null);
-                        if (attachment == null) continue;
-
-                        PageAttachment pa = new PageAttachment();
-                        pa.setPage(page);
-                        pa.setAttachment(attachment);
-                        pa.setPosition(position++);
-                        pageAttachmentRepository.save(pa);
-                    }
-
-                    return ResponseEntity.ok(toDetailsResponse(page));
-                })
-                .orElseGet(() -> ResponseEntity.notFound().build());
+        for (Long attachmentId : request.getAttachmentIds()) {
+            Attachment attachment = attachmentRepository.findById(attachmentId).orElse(null);
+            if (attachment == null) continue;
+            PageAttachment pa = new PageAttachment();
+            pa.setPage(page);
+            pa.setAttachment(attachment);
+            pa.setPosition(position++);
+            pageAttachmentRepository.save(pa);
+        }
+        return ResponseEntity.ok(toDetailsResponse(page));
     }
 
     @DeleteMapping("/{id}/attachments/{attachmentId}")
-    public ResponseEntity<PageDetailsResponse> removeAttachment(
-            @PathVariable Long id, @PathVariable Long attachmentId) {
-
+    public ResponseEntity<PageDetailsResponse> removeAttachment(@PathVariable Long id,
+                                                                @PathVariable Long attachmentId) {
         List<PageAttachment> links = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
-        boolean removed = false;
 
+        boolean removed = false;
         for (PageAttachment link : links) {
             if (link.getAttachment().getId().equals(attachmentId)) {
                 pageAttachmentRepository.delete(link);
@@ -161,9 +147,11 @@ public class PageController {
                 break;
             }
         }
+        if (!removed) {
+            throw new NoSuchElementException("Attachment not linked to page: " + attachmentId);
+        }
 
-        if (!removed) return ResponseEntity.notFound().build();
-
+        // переиндексация позиций
         List<PageAttachment> remaining = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
         for (int i = 0; i < remaining.size(); i++) {
             if (remaining.get(i).getPosition() != i) {
@@ -172,21 +160,24 @@ public class PageController {
             }
         }
 
-        return pageRepository.findById(id)
-                .map(p -> ResponseEntity.ok(toDetailsResponse(p)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
+
+        return ResponseEntity.ok(toDetailsResponse(page));
     }
 
     @PatchMapping("/{id}/attachments/reorder")
-    public ResponseEntity<PageDetailsResponse> reorderAttachments(
-            @PathVariable Long id,
-            @Valid @RequestBody ReorderAttachmentsRequest request) {
-
+    public ResponseEntity<PageDetailsResponse> reorderAttachments(@PathVariable Long id,
+                                                                  @Valid @RequestBody ReorderAttachmentsRequest request) {
         List<PageAttachment> links = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
-        if (links.isEmpty()) return ResponseEntity.notFound().build();
+        if (links.isEmpty()) {
+            throw new NoSuchElementException("No attachments for page: " + id);
+        }
 
         List<Long> ids = request.getAttachmentIdsInOrder();
-        if (ids.size() != links.size()) return ResponseEntity.badRequest().build();
+        if (ids.size() != links.size()) {
+            throw new IllegalArgumentException("Attachment count mismatch");
+        }
 
         Map<Long, PageAttachment> byId = links.stream()
                 .collect(Collectors.toMap(l -> l.getAttachment().getId(), l -> l));
@@ -194,8 +185,9 @@ public class PageController {
         int pos = 0;
         for (Long aId : ids) {
             PageAttachment link = byId.get(aId);
-            if (link == null) return ResponseEntity.badRequest().build();
-
+            if (link == null) {
+                throw new IllegalArgumentException("Unknown attachment id in order: " + aId);
+            }
             if (link.getPosition() != pos) {
                 link.setPosition(pos);
                 pageAttachmentRepository.save(link);
@@ -203,11 +195,13 @@ public class PageController {
             pos++;
         }
 
-        return pageRepository.findById(id)
-                .map(p -> ResponseEntity.ok(toDetailsResponse(p)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
+
+        return ResponseEntity.ok(toDetailsResponse(page));
     }
 
+    // ==== Publishing ====
 
     @Transactional
     @PostMapping("/{id}/publish")
@@ -220,15 +214,18 @@ public class PageController {
     @GetMapping("/{id}/publish/status")
     public ResponseEntity<PublishResponse> publishStatus(@PathVariable Long id) {
         PublishLog latest = publishingService.getLatestLogForPage(id);
-        if (latest == null) return ResponseEntity.notFound().build();
-        return ResponseEntity.ok(toPublishResponse(id,latest));
+        if (latest == null) {
+            throw new NoSuchElementException("No publish logs for page: " + id);
+        }
+        return ResponseEntity.ok(toPublishResponse(id, latest));
     }
+
+    // ==== Mappers ====
 
     private PublishResponse toPublishResponse(Long pageId, PublishLog log) {
         PublishResponse dto = new PublishResponse();
         // Берём pageId из аргумента, чтобы НЕ трогать ленивую связь log.getPage()
         dto.setPageId(pageId);
-
         dto.setRemotePageId(log.getRemotePageId());
         dto.setStatus(log.getStatus().name());
         dto.setProvider(log.getProvider());
@@ -260,7 +257,7 @@ public class PageController {
                     summary.setSize(attachment.getSize());
                     summary.setDescription(attachment.getDescription());
                     return summary;
-                }).collect(Collectors.toList());
+                }).toList();
 
         response.setAttachments(attachmentSummaries);
         return response;
